--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   </head>
   <body>
     <section class="homepage">
-
+      <img class="logo" src="https://metallica.com/on/demandware.static/Sites-Metallica-Site/-/default/dw716898e9/images/header/logo-homepage.svg" alt="Metallica"">
+     <form class="register-form">
+        <h1 class="form-header">Get Tickets Now</h1>
+       <input type="text">
+       <input type="submit" value="Register">
+     </form>
     </section>
   </body>
 </html>
