--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <img class="logo" src="https://metallica.com/on/demandware.static/Sites-Metallica-Site/-/default/dw716898e9/images/header/logo-homepage.svg" alt="Metallica"">
      <form class="register-form" action="complete.html" method="get">
         <h1 class="form-header">Get Updates About Ticket Sales</h1>
-       <input type="text" placeholder="Enter email to get ticket updates">
+       <input type="text" name="name" placeholder="Enter email to get ticket updates">
        <input type="submit" value="Register">
      </form>
     </section>
